<resources>
    <string name="app_name">Smart Calendar</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="my_app">My app</string>
    <string name="name">Nguyen Ngoc Sang</string>
    <string name="mail">sangnn@hcmute.edu.vn</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="calendar">Calendar</string>
    <string name="alarm">Alarm</string>
    <string name="notes">Notes</string>
    <string name="sign_in">Sign In</string>
    <string name="username">username</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="not_registered">Not registered?</string>
    <string name="create_an_account">Create an account</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">confirm password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="about">About</string>
    <!--    Notification-->
    <string name="channel_name">Testing</string>
    <string name="channel_description">Testing Notification Channel</string>
</resources>