<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDeleteNoteContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog"
    android:paddingBottom="@dimen/_2sdp">

    <ImageView
        android:id="@+id/imageDeleteNote"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorText" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/delete_note"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/imageDeleteNote"
        app:layout_constraintLeft_toRightOf="@id/imageDeleteNote"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageDeleteNote" />

    <TextView
        android:id="@+id/textDeleteNoteMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingLeft="@dimen/_8sdp"
        android:paddingRight="@dimen/_8sdp"
        android:text="@string/are_you_sure_you_want_to_delete_this_note"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/imageDeleteNote" />

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/colorAccentNote"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMessage" />

    <TextView
        android:id="@+id/textDeleteNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/delete"
        android:textAllCaps="true"
        android:textColor="@color/colorDelete"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintRight_toLeftOf="@id/textCancel"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>